demo-shell-ng2/app/components/app-layout/app-layout.component.scss
@mixin adf-app-layout-theme($theme) {
    $primary: map-get($theme, primary);
    $minimumAppWidth: 320px;
    $toolbarHeight: 64px;

    .adf-app-layout {
        display: block;
        min-width: $minimumAppWidth;
        height: 100%;

        .adf-nav-container {
            display: block;
            min-width: $minimumAppWidth;
            height: 100%;
        }

        .adf-sidenav-link {
            &.active {
                color: mat-color($primary);
            }
        }

        &-user-profile {
            margin-right: 10px;
        }

        &-menu-spacer {
            flex: 1 1 auto;
        }

        &-toolbar {
            height: $toolbarHeight;
            line-height: $toolbarHeight;
            overflow: hidden;

            mat-toolbar-row {
                height: $toolbarHeight;
                align-items: stretch;
                justify-content: space-between;
            }

            .adf-toolbar-link {
                min-width: 0;
                line-height: $toolbarHeight;

                &.active {
                    background-color: rgba(0,0,0,.12);
                }
            }
        }
    }
}

